--- a/src/app/layouts/menustoday/menustoday.component.html
+++ b/src/app/layouts/menustoday/menustoday.component.html
@@ -19,7 +19,7 @@
                             labort.
                         </p>
                     </div>
-                    <div>
+                    <div class="prod-wrapper">
                         <div class="menu-product">
                             <div class="text">
                                 <h5>Main Course</h5>
@@ -42,10 +42,10 @@
                             <div class="menu-ico"></div>
                         </div>
                     </div>
-                    <div class="menu-btns">
+                    <!--<div class="menu-btns">
                         <button disabled></button>
                         <button></button>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
