--- a/src/app/layouts/header/header.component.scss
+++ b/src/app/layouts/header/header.component.scss
@@ -1,7 +1,7 @@
-@import '../../shared/styles/base';
-@import '../../shared/styles/variables';
+@import "../../shared/styles/base";
+@import "../../shared/styles/variables";
 
-header{
+header {
     //position: sticky;
     //top: 0;
     //z-index: 100;
@@ -9,20 +9,19 @@ header{
     background-color: #fff;
 }
 
-
-.header-inner{
+.header-inner {
     height: 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.header-left{
+.header-left {
     display: flex;
     align-items: center;
 }
 
-.burger-menu{
+.burger-menu {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -34,57 +33,57 @@ header{
     bottom: 0;
     right: 0;
     z-index: 110;
-    a{
+    a {
         font-size: 30px;
         margin: 20px;
     }
 }
 
-.open-burger{
+.open-burger {
     width: 24px;
     height: 24px;
     margin-right: 10px;
     outline: none;
     border: none;
-    background: url('../../../assets/images/menu.svg') center/cover no-repeat transparent;
+    background: url("../../../assets/images/menu.svg") center/cover no-repeat transparent;
     display: none;
 }
 
-.logo a{
+.logo a {
     font-weight: bold;
     font-size: 24px;
     line-height: 36px;
     color: $titleText;
 }
 
-.link{
+.link {
     padding: 5px;
     border-radius: 10px;
     font-weight: 600;
     font-size: 16px;
     line-height: 24px;
     color: $titleText;
-    transition: all .2s;
-    &:hover{
+    transition: all 0.2s;
+    &:hover {
         color: $primary;
-        background: #FE724C20;
+        background: #fe724c20;
     }
 }
 
-.active{
+.active {
     color: $primary;
 }
 
-nav{
+nav {
     display: flex;
     align-items: center;
 }
 
-nav a{
+nav a {
     margin-left: 50px;
 }
 
-.sing-in{
+.sing-in {
     width: 96px;
     height: 44px;
     padding: 0;
@@ -92,55 +91,73 @@ nav a{
     text-transform: capitalize;
 }
 
-.active-sing-in{
+.active-sing-in {
     color: $whiteText;
     background: $primary;
     border: 3px solid $primary;
 }
 
-.basket{
+.basket {
     width: 45px;
     height: 45px;
     margin-left: 50px;
     padding: 0;
-    background: url('../../../assets/images/bag.svg') center/18px no-repeat #FE724C;
+    background: url("../../../assets/images/bag.svg") center/18px no-repeat #fe724c;
     border-radius: 15px;
 }
 
-.close-btn{
+.close-btn {
     position: absolute;
     top: 30px;
     right: 30px;
 }
 
-@media screen and (max-width: 414px) {
-    header{
+@media screen and (max-width: 880px) and (min-width: 768px) {
+    nav a {
+        margin-left: 20px;
+    }
+}
+
+@media screen and (max-width: 768px) and (min-width: 414px) {
+    header {
         padding: 0px 30px;
-        .header-inner{
+    }
+    nav a:nth-child(-n + 3) {
+        display: none;
+    }
+    .open-burger {
+        display: inline-block;
+    }
+}
+
+@media screen and (max-width: 470px) {
+    header {
+        padding: 0px 30px;
+        .header-inner {
             height: 67px;
         }
-        
-        .logo a{
+
+        .logo a {
             font-size: 18px;
         }
-        nav a:nth-child(-n+3){
+        nav a:nth-child(-n + 3) {
             display: none;
         }
-        nav a:nth-child(4){
+        nav a:nth-child(4) {
             width: 56px;
             height: 24px;
             margin-left: 0;
-            letter-spacing: .2px;
+            letter-spacing: 0.2px;
             font-size: 10px;
         }
-        .basket{
+        .basket {
             width: 24px;
             height: 24px;
             background-size: 10px;
             border-radius: 8px;
             margin-left: 20px;
         }
-        .open-burger{
+        .open-burger {
             display: inline-block;
         }
     }
