--- a/src/app/shared/styles/_base.scss
+++ b/src/app/shared/styles/_base.scss
@@ -476,7 +476,7 @@ p {
         font-size: 54px;
     }
 }
-@media screen and (max-width: 880px) and (min-width: 414px) {
+@media screen and (max-width: 880px) and (min-width: 768px) {
     .wrapper {
         width: 740px;
     }
@@ -485,7 +485,13 @@ p {
     }
 }
 
-@media screen and (max-width: 414px) {
+@media screen and (max-width: 768px) and (min-width: 624px){
+    .wrapper{
+        width: 590px;
+    }
+}
+
+@media screen and (max-width: 624px) {
     .wrapper {
         width: 100%;
     }
