--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -307,34 +307,39 @@
 }
 
 @media screen and (max-width: 624px) {
-    .preview-right {
-        height: 370px;
-        &::after {
-            width: 300px;
-            height: 225px;
-            margin-top: 45px;
-            left: -15px;
-        }
-    }
-    .article-preview::before {
-        height: 370px;
-    }
-    .menus {
-        margin-top: 80px;
-    }
-    .article-preview {
-        &::before {
-            top: 475px;
-            height: 40vh;
-        }
-    }
     .preview {
         flex-wrap: wrap;
         padding: 0px 30px;
         margin-bottom: 80px;
     }
+    .article-preview::before {
+        height: 260px;
+        top: 435px;
+    }
+    .preview-right {
+        position: relative;
+        margin-top: 40px;
+        width: 100%;
+        height: 260px;
+        img {
+            height: 100%;
+        }
+        &::after {
+            left: 0px;
+            top: 0;
+            margin-top: 6px;
+            position: absolute;
+            width: 320px;
+            height: 246px;
+            background: url("../../../assets/images/preview.png") center/cover no-repeat;
+        }
+    }
+    .menus {
+        margin-top: 80px;
+    }
     .preview-left {
         margin: 30px 0 40px;
+        margin-bottom: 0;
         height: 365px;
         .sup-title {
             text-transform: none;
@@ -418,37 +423,8 @@
     }
 }
 
-@media screen and (max-width: 624px) {
-    .preview-left{
-        margin-bottom: 0;
-    }
-    .article-preview::before {
-        height: 260px;
-        top: 435px;
-    }
-    .preview-right {
-        position: relative;
-        margin-top: 40px;
-        width: 100%;
-        //height: 40vh;
-        height: 260px;
-        img {
-            height: 100%;
-        }
-        &::after {
-            left: 0px;
-            top: 0;
-            margin-top: 6px;
-            position: absolute;
-            width: 320px;
-            height: 246px;
-            background: url("../../../assets/images/preview.png") left/center no-repeat;
-        }
-    }
-}
 
-
-@media screen and (max-width: 624px) {
+@media screen and (max-width: 380px) {
     .preview-left{
         margin-bottom: 30px;
     }
