--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -1,4 +1,4 @@
-@import '../../shared/styles/variables';
+@import "../../shared/styles/variables";
 @import "../../shared/styles/base";
 
 .preview {
@@ -59,6 +59,8 @@
         border-radius: 10px;
     }
     .row:nth-child(1) {
+        width: 100%;
+        margin: 0 auto;
         height: 335px;
         display: flex;
         justify-content: space-between;
@@ -76,7 +78,9 @@
         }
     }
     .row:nth-child(2) {
+        width: 100%;
         height: 335px;
+        margin: 0 auto;
         display: flex;
         justify-content: space-between;
         .photo:nth-child(1) {
@@ -100,6 +104,7 @@
     .team-photo {
         width: 495px;
         height: 360px;
+        border-radius: 25px;
         background: url("../../../assets/images/team.jpg") center/cover no-repeat;
     }
     .team-title {
@@ -146,7 +151,209 @@
     }
 }
 
-@media screen and (max-width: 414px) {
+@media screen and (max-width: 1215px) and (min-width: 1000px) {
+    .galery {
+        .row:nth-child(1) {
+            margin-bottom: 15px;
+            .photo:nth-child(1) {
+                width: 590px;
+            }
+            .photo:nth-child(2) {
+                width: 370px;
+            }
+        }
+        .row:nth-child(2) {
+            .photo:nth-child(1) {
+                width: 370px;
+            }
+            .photo:nth-child(2) {
+                width: 590px;
+            }
+        }
+    }
+    .about-us-content {
+        width: 615px;
+    }
+    .team {
+        .team-title {
+            width: 480px;
+        }
+    }
+}
+
+@media screen and (max-width: 1000px) and (min-width: 880px) {
+    .galery {
+        .row:nth-child(1) {
+            margin-bottom: 15px;
+            .photo:nth-child(1) {
+                width: 530px;
+            }
+            .photo:nth-child(2) {
+                width: 310px;
+            }
+        }
+        .row:nth-child(2) {
+            .photo:nth-child(1) {
+                width: 310px;
+            }
+            .photo:nth-child(2) {
+                width: 530px;
+            }
+        }
+    }
+    .about-us-content {
+        width: 485px;
+    }
+    .team {
+        .team-title {
+            width: 350px;
+        }
+    }
+    .outline-card {
+        width: 260px;
+        height: 320px;
+    }
+}
+
+@media screen and (max-width: 880px) and (min-width: 768px) {
+    .preview{
+        padding: 0px 80px;
+        h2{
+            font-size: 39px;
+            text-align: center;
+        }
+    }
+    .galery {
+        .row:nth-child(1) {
+            height: 280px;
+            margin-bottom: 15px;
+            .photo:nth-child(1) {
+                width: 465px;
+            }
+            .photo:nth-child(2) {
+                width: 260px;
+                height: 180px;
+            }
+        }
+        .row:nth-child(2) {
+            height: 280px;
+            .photo:nth-child(1) {
+                width: 260px;
+                height: 180px;
+            }
+            .photo:nth-child(2) {
+                width: 465px;
+            }
+        }
+    }
+    .about-us-content {
+        width: 385px;
+        h2{
+            font-size: 45px;
+        }
+    }
+    .team {
+        .team-title {
+            width: 300px;
+            h2{
+                font-size: 30px;
+            }
+            p{
+                margin-top: 20px;
+            }
+        }
+        .team-photo {
+            width: 430px;
+            height: 320px;
+        }
+    }
+    .outline-card {
+        width: 260px;
+        height: 320px;
+        h3{
+            font-size: 27px;
+        }
+    }
+}
+
+@media screen and (max-width: 768px) and (min-width: 624px) {
+    .preview{
+        margin-bottom: 90px;
+        padding: 0px 80px;
+        h2{
+            font-size: 29px;
+            text-align: center;
+        }
+        p{
+            width: 100%;
+        }
+    }
+    .galery {
+        .row:nth-child(1) {
+            height: 245px;
+            margin-bottom: 15px;
+            .photo:nth-child(1) {
+                width: 365px;
+            }
+            .photo:nth-child(2) {
+                width: 215px;
+                height: 145px;
+            }
+        }
+        .row:nth-child(2) {
+            height: 245px;
+            .photo:nth-child(1) {
+                width: 215px;
+                height: 145px;
+            }
+            .photo:nth-child(2) {
+                width: 365px;
+            }
+        }
+    }
+    .about-us{
+        margin-bottom: 90px;
+        .card{
+            width: 290px;
+            height: 360px;
+            margin: 18px 0;
+            font-size: 32px;
+        }
+    }
+    .about-us-content {
+        width: 385px;
+        h2{
+            font-size: 29px;
+            margin-bottom: 20px;
+        }
+    }
+    .team {
+        margin-bottom: 90px;
+        .team-title {
+            width: 300px;
+            h2{
+                font-size: 30px;
+            }
+            p{
+                margin-top: 20px;
+            }
+        }
+        .team-photo {
+            width: 275px;
+            height: 320px;
+        }
+    }
+    .outline-card {
+        width: 260px;
+        height: 320px;
+        h3{
+            font-size: 24px;
+            margin: 20px 0px 10px;
+        }
+    }
+}
+
+@media screen and (max-width: 624px) {
     .wrapper {
         padding: 0px 30px;
     }
@@ -166,6 +373,7 @@
     }
     .about-us {
         margin-bottom: 80px;
+        justify-content: center;
         flex-wrap: wrap;
         .about-us-content {
             margin-bottom: 40px;
@@ -189,7 +397,7 @@
     }
     .galery {
         .row:nth-child(1) {
-            height: 102px;
+            height: 30vw;
             margin-bottom: 10px;
             .photo:nth-child(1) {
                 width: 63%;
@@ -197,14 +405,14 @@
             }
             .photo:nth-child(2) {
                 width: 34%;
-                height: 71px;
+                height: 17vw;
             }
         }
         .row:nth-child(2) {
-            height: 102px;
+            height: 30vw;
             .photo:nth-child(1) {
                 width: 34%;
-                height: 71px;
+                height: 17vw;
             }
             .photo:nth-child(2) {
                 width: 63%;
