--- a/src/app/layouts/feedback/feedback.component.html
+++ b/src/app/layouts/feedback/feedback.component.html
@@ -4,8 +4,8 @@
             <div class="feedback-left">
                 <div class="user-photo"></div>
                 <div class="user-name">
-                    <h4 class="primary-text">Mason Jonas</h4>
-                    <p class="user-position">Human Resource Development</p>
+                    <h4 class="primary-text orange">Mason Jonas</h4>
+                    <p class="user-position post">Human Resource Development</p>
                 </div>
             </div>
             <div class="feedback-right">
