--- a/src/app/pages/foods/foods.component.scss
+++ b/src/app/pages/foods/foods.component.scss
@@ -27,6 +27,7 @@
     //justify-content: center;
     position: relative;
     .sidebar-btns {
+        width: 200px;
         padding-right: 30px;
         display: flex;
         flex-direction: column;
@@ -129,22 +130,12 @@
     border-radius: 9em;
 }
 
-//.menu-list:hover ::-webkit-scrollbar-thumb {
-//    background-color: #253861;
-//    background-color: red;
-//}
-
 .menu-list {
     height: 430px;
     margin-top: 20px;
     width: 100%;
     overflow: auto;
     padding-right: 3px;
-    //&:hover{
-    //    ::-webkit-scrollbar-thumb:hover{
-    //        background-color: #d3d3d3;
-    //    }
-    //}
     .list-item {
         width: 100%;
         display: flex;
@@ -196,9 +187,11 @@
 }
 
 .product {
+    width: 100%;
     margin-left: 20px;
     position: relative;
     display: flex;
+    justify-content: space-between;
     .product-main-photo {
         width: 260px;
         height: 180px;
@@ -381,7 +374,212 @@
     }
 }
 
-@media screen and (max-width: 414px) {
+@media screen and (max-width: 1215px) and (min-width: 1000px) {
+    .menu-sidebar {
+        .sidebar-btns{
+            width: 180px;
+            padding-right: 15px;
+            .sidebar-btn{
+                font-size: 24px;
+            }
+        }
+    }
+    .product{
+        .product-main-photo{
+            width: 230px;
+            margin-right: 20px;
+        }
+        .product-desc{
+            width: 275px;
+        }
+    }
+    .details{
+        padding: 60px 20px;
+        .details-photos{
+            max-width: 275px;
+        }
+        .card{
+            max-width: 255px;
+        }
+        .description{
+            max-width: 205px;
+        }
+    }
+}
+
+@media screen and (max-width: 1000px) and (min-width: 769px) {
+    .menu-sidebar {
+        .sidebar-btns{
+            width: 180px;
+            padding-right: 15px;
+            .sidebar-btn{
+                font-size: 24px;
+            }
+        }
+    }
+    .menu-bottom{
+        justify-content: space-between;
+    }
+    .product{
+        flex-direction: column;
+        align-items: flex-end;
+        .product-desc{
+            width: 100%;
+            p, span{
+                margin: 0 !important;
+            }
+        }
+        .product-photos{
+            padding: 0;
+            width: 300px;
+            .product-main-photo{
+                width: 100%;
+                margin-right: 0;
+            }
+            .footer-photos{
+                display: none;
+            }
+        }
+        .product-footer-btns{
+            position: relative;
+        }
+    }
+    .details{
+        padding: 60px 20px;
+        .details-photos{
+            max-width: 230px;
+            .details-main-photo{
+                height: 210px;
+            }
+        }
+        .card{
+            max-width: 220px;
+            height: 340px;
+            h4{
+                margin-bottom: 5px;
+            }
+        }
+        .description{
+            display: none;
+        }
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .menu {
+        margin-bottom: 80px;
+    }
+    .menu-title {
+        margin: 60px 0 50px;
+        h2 {
+            margin-bottom: 0;
+        }
+        p {
+            width: 100%;
+        }
+    }
+    .menu-bottom {
+        flex-wrap: wrap;
+    }
+    .menu-sidebar {
+        width: 100%;
+        justify-content: space-between;
+        .sidebar-right {
+            padding: 0;
+        }
+        .menu-list {
+            margin-top: 0;
+            height: 325px;
+        }
+        .sidebar-btns {
+            justify-content: start;
+            padding: 0;
+            border: none;
+        }
+        .sidebar-btn {
+            font-size: 23px !important;
+        }
+        .sidebar-footer,
+        .choose {
+            display: none;
+        }
+        .list-item {
+            flex-direction: row-reverse;
+            .item-title {
+                margin-right: 10px;
+                text-align: right;
+            }
+            .item-img {
+                width: 50px;
+                height: 50px;
+                margin: 0;
+            }
+        }
+    }
+    .menu-content {
+        width: 100%;
+        padding: 0;
+    }
+    .product {
+        width: 100%;
+        margin: 40px 0;
+        justify-content: space-between;
+    }
+    .product-photos {
+        width: 45%;
+        height: 350px;
+        margin-bottom: 40px;
+        padding-top: 60px;
+        display: flex;
+        justify-content: center;
+        .product-main-photo {
+            width: 259px;
+            margin: 0;
+        }
+        .footer-photos {
+            left: 50%;
+            width: auto;
+            transform: translateX(-50%);
+            .footer-photo:first-child {
+                margin: 0;
+            }
+        }
+    }
+    .product-desc {
+        min-height: 295px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        p {
+            height: auto;
+            margin-bottom: 10px !important;
+        }
+        h4 {
+            width: 125px;
+        }
+        span {
+            margin: 0px 0px 10px !important;
+        }
+        .product-footer-btns {
+            position: static;
+            margin-top: 10px;
+            button:first-child {
+                border: none;
+                &:hover {
+                    color: $primaryHover;
+                    background: transparent;
+                }
+            }
+        }
+    }
+    .details {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+}
+
+
+@media screen and (max-width: 624px) {
     .menu {
         padding: 0px 30px;
         margin-bottom: 80px;
@@ -440,26 +638,21 @@
         flex-wrap: wrap;
     }
     .product-photos {
-        width: 100%;
+        width: 80%;
         height: 350px;
+        margin: 0 auto;
         margin-bottom: 40px;
         padding-top: 60px;
         display: flex;
         justify-content: center;
         .product-main-photo {
-            width: 259px;
+            width: 100%;
+            height: 200px;
             margin: 0;
-        }
-        .footer-photos {
-            left: 50%;
-            width: auto;
-            transform: translateX(-50%);
-            .footer-photo:first-child {
-                margin: 0;
-            }
         }
     }
     .product-desc {
+        width: 100% !important;
         min-height: 295px;
         display: flex;
         flex-direction: column;
