--- a/src/app/pages/pricing/pricing.component.scss
+++ b/src/app/pages/pricing/pricing.component.scss
@@ -35,6 +35,12 @@
             p {
                 opacity: 0.7;
             }
+            .orange{
+                color: $primary;
+            }
+            .post{
+                color: $titleText;
+            }
         }
     }
 }
@@ -158,7 +164,111 @@
     }
 }
 
-@media screen and (max-width: 414px) {
+@media screen and (max-width: 1215px) and (min-width: 1000px) {
+    .foods-card{
+        width: 315px;
+        .foods-card-head h5 {
+            font-size: 26px;
+        }
+        h2{
+            font-size: 42px;
+        }
+    }
+    .card-long{
+        width: 595px;
+    }
+    .delivery{
+        width: 360px;
+    }
+    .question-item-top{
+        p{
+            font-size: 21px;
+        }
+    }
+}
+
+@media screen and (max-width: 1000px) and (min-width: 880px) {
+    .foods-card{
+        width: 280px;
+        height: 385px;
+        .foods-card-head {
+            padding-bottom: 20px;
+            .head-photo{
+                min-width: 80px;
+                height: 80px;
+            }
+            h5{
+                font-size: 26px;
+            }
+        }
+        h2{
+            font-size: 38px;
+        }
+    }
+    .card-long{
+        width: 475px;
+    }
+    .delivery{
+        width: 360px;
+    }
+    .question-item-top{
+        p{
+            font-size: 18px;
+        }
+    }
+}
+@media screen and (max-width: 880px) and (min-width: 769px) {
+    .bundle{
+        margin-bottom: -80px;
+    }
+    .bundle-title{
+        margin-bottom: 60px;
+        h2{
+            font-size: 40px;
+        }
+    }
+    .foods-card{
+        width: 238px;
+        height: 325px;
+        .foods-card-head {
+            padding-bottom: 20px;
+            margin-bottom: 5px;
+            .head-photo{
+                min-width: 80px;
+                height: 80px;
+                margin-right: 5px;
+            }
+            h5{
+                font-size: 19px;
+            }
+            p{
+                font-size: 10px;
+            }
+        }
+        button{
+            min-height: 41px;
+        }
+        h2{
+            font-size: 33px;
+        }
+        li{
+            margin: 0;
+        }
+    }
+    .card-long{
+        width: 370px;
+    }
+    .delivery{
+        width: 340px;
+    }
+    .question-item-top{
+        p{
+            font-size: 14px;
+        }
+    }
+}
+
+@media screen and (max-width: 768px) {
     .bundle {
         padding: 0px 30px;
         margin: 50px 0 80px;
@@ -168,6 +278,11 @@
     }
     .bundle-cards {
         flex-wrap: wrap;
+        padding: 0px 30px;
+        justify-content: center;
+        .foods-card{
+            margin-bottom: 30px;
+        }
     }
     .question {
         padding: 30px 0;
@@ -185,6 +300,7 @@
         padding: 15px;
     }
     .question-item-top {
+        margin-top: 20px !important;
         p {
             font-size: 18px;
         }
@@ -209,7 +325,7 @@
                     color: $titleText;
                 }
                 h4 {
-                    color: $primary;
+                    color: $primary !important;
                 }
             }
         }
@@ -235,6 +351,15 @@
                     color: $primaryHover;
                 }
             }
+        }
+    }
+}
+
+@media screen and (max-width: 414px){
+.question-item-top {
+        margin-top: 10px !important;
+        p {
+            font-size: 18px;
         }
     }
 }
