--- a/src/app/shared/styles/_base.scss
+++ b/src/app/shared/styles/_base.scss
@@ -425,7 +425,7 @@ p {
         }
     }
     .head-photo{
-        width: 110px;
+        min-width: 110px;
         height: 110px;
         margin-right: 20px;
         border-radius: 20px;
@@ -517,7 +517,8 @@ p {
         }
     }
     .foods-card{
-        width: 100%;
+        //width: 100%;
+        width: 355px;
         margin-bottom: 50px;
         .foods-card-head{
             h5{
