--- a/src/app/admin/admin-product/admin-product.component.html
+++ b/src/app/admin/admin-product/admin-product.component.html
@@ -87,7 +87,7 @@
                             <!--<option selected disabled>Choose category</option>-->
                             <option value="Main Course">Main Course</option>
                             <option value="Dizzerts">Dizzerts</option>
-                            <option value="Apetizers">Apetizers</option>
+                            <option value="Appetizers">Appetizers</option>
                         </select>
                     </div>
                     <div class="mb-3">
