--- a/src/app/pages/foods/foods.component.scss
+++ b/src/app/pages/foods/foods.component.scss
@@ -27,8 +27,8 @@
     //justify-content: center;
     position: relative;
     .sidebar-btns {
-        width: 200px;
-        padding-right: 30px;
+        width: 210px;
+        //padding-right: 0px;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -112,14 +112,6 @@
     padding-left: 30px;
 }
 
-//.menu-list::-webkit-scrollbar-thumb {
-//    width: 10px;
-//    border-radius: 9em;
-//    background-color: red;
-//}
-//.menu-list::-webkit-scrollbar {
-//}
-
 ::-webkit-scrollbar {
     width: 6px;
     background-color: transparent;
@@ -156,7 +148,7 @@
             height: 70px;
             margin-right: 20px;
             border-radius: 10px;
-            background: url("../../../assets/images/menu-item-img.jpg") center/cover no-repeat;
+            background: url("../../../assets/images/menu-item-img.jpg") center/105% no-repeat white;
         }
         .item-title {
             width: 90px;
@@ -170,6 +162,7 @@
         }
     }
     .active-item {
+        background-color: #fe724c20;
         .item-title {
             font-weight: 600;
             color: $titleText;
@@ -194,9 +187,9 @@
     justify-content: space-between;
     .product-main-photo {
         width: 260px;
-        height: 180px;
+        height: 210px;
         margin: 0px 70px 0 0;
-        background: url("../../../assets/images/main-product-img.png") center/cover no-repeat;
+        background: url("../../../assets/images/main-product-img.png") center/90% no-repeat;
         border-radius: 20px;
     }
     .product-desc {
@@ -321,9 +314,9 @@
 }
 
 .details-main-photo {
-    height: 240px;
+    height: 290px;
     border-radius: 20px;
-    background: url("../../../assets/images/main-product-img.png") center/cover no-repeat;
+    background: url("../../../assets/images/main-product-img.png") center/90% no-repeat;
 }
 
 .details-footer-photos {
@@ -417,6 +410,9 @@
             }
         }
     }
+    .menu-content {
+        padding-left: 10px;
+    }
     .menu-bottom{
         justify-content: space-between;
     }
@@ -489,7 +485,7 @@
         }
         .menu-list {
             margin-top: 0;
-            height: 325px;
+            height: 328px;
         }
         .sidebar-btns {
             justify-content: start;
@@ -556,6 +552,7 @@
         }
         h4 {
             width: 125px;
+            font-size: 27px;
         }
         span {
             margin: 0px 0px 10px !important;
@@ -604,7 +601,7 @@
         }
         .menu-list {
             margin-top: 0;
-            height: 325px;
+            height: 328px;
         }
         .sidebar-btns {
             justify-content: start;
@@ -639,15 +636,16 @@
     }
     .product-photos {
         width: 80%;
-        height: 350px;
+        height: 50vw;
         margin: 0 auto;
         margin-bottom: 40px;
         padding-top: 60px;
         display: flex;
         justify-content: center;
+        padding: 0;
         .product-main-photo {
             width: 100%;
-            height: 200px;
+            height: 50vw;
             margin: 0;
         }
     }
@@ -683,3 +681,9 @@
         flex-wrap: wrap;
     }
 }
+
+//@media screen and (max-width: 510px){
+//    .product-photos{
+//        height: 290px;
+//    }
+//}
