--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -6,11 +6,13 @@
                     <a [routerLink]="[ 'product' ]" routerLinkActive="active" class="btn btn-secondary">Product</a>
                     <a [routerLink]="[ 'bundle' ]" routerLinkActive="active" class="btn btn-secondary">Bundle</a>
                     <a [routerLink]="[ 'orders' ]" routerLinkActive="active" class="btn btn-secondary">Orders</a>
+                    <a [routerLink]="[ 'archive' ]" routerLinkActive="active" class="btn btn-secondary">Archive</a>
                 </div>
                 <div class="btn-group" role="group" aria-label="Basic example">
                     <a [routerLink]="[ 'product' ]" routerLinkActive="active" class="btn btn-secondary">Product</a>
                     <a [routerLink]="[ 'bundle' ]" routerLinkActive="active" class="btn btn-secondary">Bundle</a>
                     <a [routerLink]="[ 'orders' ]" routerLinkActive="active" class="btn btn-secondary">Orders</a>
+                    <a [routerLink]="[ 'archive' ]" routerLinkActive="active" class="btn btn-secondary">Archive</a>
                 </div>
                 <div class="container-fluid" id="v-pills-tabContent">
                     <router-outlet></router-outlet>
